Debug after the merge